--- a/app/src/main/res/layout/item_stream.xml
+++ b/app/src/main/res/layout/item_stream.xml
@@ -21,7 +21,7 @@
             android:textSize="12sp"
             android:fontFamily="sans-serif-condensed"
             android:textStyle="normal"
-            android:gravity="start" />
+            android:gravity="center_vertical|start" />
 
     </LinearLayout>
 </layout>
