Update visual assets

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -50,7 +50,12 @@
                 android:paddingVertical="12dp"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:nextFocusDown="@id/chipGroupSearchType"
+                android:nextFocusRight="@id/searchButton" />
 
             <ImageButton
                 android:id="@+id/searchButton"
