--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -10,6 +10,11 @@
         android:layout_height="match_parent"
         android:background="#000000">
 
+        <SurfaceView
+            android:id="@+id/videoSurface"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
 
         <ProgressBar
             android:id="@+id/loadingProgress"
