--- a/app/src/main/res/layout/activity_details2.xml
+++ b/app/src/main/res/layout/activity_details2.xml
@@ -16,8 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:alpha="0.3"
-            app:layout_constraintTop_toTopOf="parent"
+            android:alpha="0.1"  app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +74,8 @@
                         android:backgroundTint="@color/color_primary"
                         android:textColor="@android:color/white"
                         android:focusable="true"
+                        app:strokeColor="@color/selector_focus_stroke"
+                        app:strokeWidth="3dp"
                         android:layout_marginBottom="0dp"/>
 
                     <Button
@@ -85,26 +86,32 @@
                         android:backgroundTint="#555555"
                         android:textColor="@android:color/white"
                         android:focusable="true"
+                        app:strokeColor="@color/selector_focus_stroke"
+                        app:strokeWidth="3dp"
                         android:layout_marginBottom="0dp"/>
 
                     <Button
                         android:id="@+id/btnLibrary"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Add To Library"
+                        android:text="Library +"
                         android:backgroundTint="#555555"
                         android:textColor="@android:color/white"
                         android:focusable="true"
+                        app:strokeColor="@color/selector_focus_stroke"
+                        app:strokeWidth="3dp"
                         android:layout_marginBottom="0dp"/>
 
                     <Button
                         android:id="@+id/btnWatchlist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Add To Watchlist"
+                        android:text="TMDB Watchlist +"
                         android:backgroundTint="#555555"
                         android:textColor="@android:color/white"
-                        android:focusable="true" />
+                        android:focusable="true"
+                        app:strokeColor="@color/selector_focus_stroke"
+                        app:strokeWidth="3dp" />
 
                 </LinearLayout>
 
