--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -30,13 +30,13 @@
             android:layout_height="0dp"
             android:layout_marginTop="90dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/background_content_box"
             android:padding="8dp"
             app:layout_constraintWidth_percent="0.3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/rvContent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/detailsContainer"
@@ -51,8 +51,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rvSidebar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/rvContent"
-            app:layout_constraintVertical_weight="1">
+            app:layout_constraintBottom_toTopOf="@id/rvContent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/metaColumn"
@@ -92,7 +91,7 @@
                         android:textStyle="bold"
                         android:maxLines="3"
                         android:ellipsize="end"
-                        tools:text="Movie Title Fallback" />
+                        tools:text="Title Fallback" />
                 </FrameLayout>
 
                 <TextView
@@ -137,7 +136,7 @@
                     android:textColor="#DDDDDD"
                     android:textSize="16sp"
                     android:lineSpacingExtra="6dp"
-                    tools:text="Full movie description goes here..." />
+                    tools:text="Description text..." />
             </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -146,16 +145,15 @@
             android:id="@+id/rvContent"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:paddingTop="0dp"
             android:clipToPadding="false"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rvSidebar"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/detailsContainer"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_weight="1" />
+            app:layout_constraintHeight_percent="0.5" />
 
         <ProgressBar
             android:id="@+id/progressBar"
