--- a/app/src/main/res/layout/item_poster.xml
+++ b/app/src/main/res/layout/item_poster.xml
@@ -6,7 +6,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:focusable="true"
@@ -19,21 +19,20 @@
         android:foreground="?attr/selectableItemBackground">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/poster"
-                android:layout_width="0dp"
-                android:layout_height="160dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:scaleType="centerCrop"
                 android:background="#2A2A2A"
                 android:contentDescription="Movie Poster"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/titleOverlay"
-                app:layout_constraintDimensionRatio="H, 86:58" />
+                app:layout_constraintDimensionRatio="H,58:86" />
 
             <LinearLayout
                 android:id="@+id/titleOverlay"
