--- a/app/src/main/res/layout/item_stream.xml
+++ b/app/src/main/res/layout/item_stream.xml
@@ -7,11 +7,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:padding="8dp"
         android:focusable="true"
         android:clickable="true"
         android:background="@drawable/selector_focus_border">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="60dp"
+            android:layout_height="34dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            android:layout_marginEnd="12dp"
+            android:contentDescription="Thumbnail" />
 
         <TextView
             android:id="@+id/title"
